--- a/public/css/style.css
+++ b/public/css/style.css
@@ -162,7 +162,7 @@ html, body {
     padding-top: 30px;
     margin-top:16px;
     background: #1B1E25;
-    height:100vh;
+    height:110rem;
     list-style-type: none;
     -webkit-font-smoothing: antialiased;
     transform-origin: 0% 0%;
