--- a/public/css/style.css
+++ b/public/css/style.css
@@ -162,7 +162,7 @@ html, body {
     padding-top: 30px;
     margin-top:16px;
     background: #1B1E25;
-    height:110rem;
+    height:120rem;
     list-style-type: none;
     -webkit-font-smoothing: antialiased;
     transform-origin: 0% 0%;
@@ -183,6 +183,10 @@ html, body {
     font-size:1.2em;
     font-weight:bold;
     padding-bottom:30px;
+}
+
+.profile-picture {
+    width: 150px;
 }
 
 #menu li
@@ -229,6 +233,15 @@ html, body {
     flex-basis:5px;
 }
 
+.flex-container1 {
+    display: flex;
+    justify-content: space-around;
+    background-color: #F7F7F7;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+
+}
+
 .infotekst{
     color:#A5A5A5;
     font-size:0.9em;
@@ -251,6 +264,14 @@ html, body {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     height:auto;
+    
+}
+
+.bottombox_qualities{
+    flex-direction: column;
+    border-right: 1px solid #CECECE;
+    flex-grow: 1;
+    
 }
 
 .settingsicon{
@@ -265,8 +286,6 @@ html, body {
     margin-right:-40px;
     margin-top:-25px;
 }
-
-
 
 #flexbox{
     display:flex;
@@ -343,6 +362,10 @@ html, body {
     text-align:center;
     font-size:0.9em;
     font-weight:bold;
+}
+
+.input:focus {
+    outline: none;
 }
 
 
