--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-
 html, body {
     background-color: #E2E2E2;
     color: #636b6f;
@@ -162,14 +161,13 @@ html, body {
     padding-top: 30px;
     margin-top:16px;
     background: #1B1E25;
-    height:120rem;
+    height:110rem;
     list-style-type: none;
     -webkit-font-smoothing: antialiased;
     transform-origin: 0% 0%;
     transform: translate(-100%, 0);
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-    border-bottom-left-radius:10px;
-    border-bottom-right-radius:10px;
+   
 }
 
 .profile-info{
@@ -183,10 +181,6 @@ html, body {
     font-size:1.2em;
     font-weight:bold;
     padding-bottom:30px;
-}
-
-.profile-picture {
-    width: 150px;
 }
 
 #menu li
@@ -233,15 +227,6 @@ html, body {
     flex-basis:5px;
 }
 
-.flex-container1 {
-    display: flex;
-    justify-content: space-around;
-    background-color: #F7F7F7;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-
-}
-
 .infotekst{
     color:#A5A5A5;
     font-size:0.9em;
@@ -264,20 +249,12 @@ html, body {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     height:auto;
-    
-}
-
-.bottombox_qualities{
-    flex-direction: column;
-    border-right: 1px solid #CECECE;
-    flex-grow: 1;
-    
 }
 
 .settingsicon{
-     width:20px;
-     float:right;
-     margin-right:10px;
+    width:20px;
+    float:right;
+    margin-right:10px;
  }
 
 .settingsiconwhite{
@@ -364,8 +341,7 @@ html, body {
     font-weight:bold;
 }
 
-.input:focus {
-    outline: none;
+#settingsicondown{
+    margin-top:-21px;
 }
-
 
