Small design fixes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -507,3 +507,7 @@ a{
 a:hover{
     text-decoration:none;
 }
+
+.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
+    background-color:transparent;
+}
